HVAC Backup 2/objects/Defective_Product_Item__c(1).object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>If(  ISPICKVAL(Defective_Category__c,&apos;RMR&apos;),
(CASESAFEID(Part_Request__r.WorkOrder.Asset.Branch__c)),
(CASESAFEID( Part_Request__r.Branch__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <formula>If( ISPICKVAL(Defective_Category__c,&apos;RMR&apos;),
(CASESAFEID( Part_Request__r.WorkOrder.Asset.Branch__r.Name )),
(CASESAFEID( Part_Request__r.Branch__r.Name )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CGST__c</fullName>
        <formula>IF( ISPICKVAL( Defective_Category__c ,&apos;Sales Order&apos;) ,  Part_Request_Line_Item__r.CGST__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Code__c</fullName>
        <formula>Channel_Partner__r.CP_Code__c</formula>
        <label>CP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_From_GRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From GRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective_Category__c</fullName>
        <label>Defective/Mismatch Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMR</fullName>
                    <default>true</default>
                    <label>RMR</label>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defective_Part_Serial_Number__c</fullName>
        <label>Defective Part Serial Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defective_part_comments__c</fullName>
        <label>Defective part comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defective_part_make__c</fullName>
        <label>Defective part make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bluestar</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGST__c</fullName>
        <formula>IF( ISPICKVAL( Defective_Category__c ,&apos;Sales Order&apos;) ,  Part_Request_Line_Item__r.Tax__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the source inventory</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCT_Number__c</fullName>
        <displayFormat>PCT -{0000000}</displayFormat>
        <label>PCT Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Part_Amount__c</fullName>
        <formula>Product_Transfer__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Claim_Number_Hyper__c</fullName>
        <formula>IF( OR (
$Profile.Name == &apos;Channel Partner User - ssd&apos;,
$Profile.Name == &apos;Channel Partner User - esa&apos;,
$Profile.Name == &apos;Channel Partner User - BA&apos;
),
HYPERLINK(
&quot;/s/detail/&quot; &amp;  Reverse_GRN__c ,
 Part_Claim_Number_Text__c  ,
&quot;_top&quot;
),




HYPERLINK(
&quot;/&quot; &amp;Reverse_GRN__c,
Part_Claim_Number_Text__c ,
&quot;_self&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Claim_Number_Text__c</fullName>
        <formula>&apos;PCT-&apos; + Reverse_GRN__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Division_Name__c</fullName>
        <formula>IF( ISPICKVAL( Defective_Category__c , &apos;RMR&apos;), 
Part_Request__r.WorkOrder.Asset.Serviceable_Division__r.Name,
 Part_Request__r.Division__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Division Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Price__c</fullName>
        <formula>if( ISPICKVAL(Defective_Category__c, &apos;Sales Order&apos;) , Part_Request_Line_Item__r.Part_Unit_Price__c ,1.00)</formula>
        <label>Part Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Request_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Request Line Item</label>
        <referenceTo>ProductRequestLineItem</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Tax__c</fullName>
        <formula>Part_Request_Line_Item__r.Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Division__c</fullName>
        <formula>Part_Request__r.WorkOrder.Asset.Serviceable_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <formula>Product_Name__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Text__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Transfer</label>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Part Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mismatched</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_In_Transit__c</fullName>
        <label>Quantity In Transit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_On_Hand__c</fullName>
        <label>Defective Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_UoM__c</fullName>
        <description>refers to the unit of measurement</description>
        <label>Quantity UoM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Mtr</fullName>
                </value>
                <value>
                    <fullName>Tonnage of Refrigeration</fullName>
                </value>
                <value>
                    <fullName>British Thermal Unit,Cubic Feet per Minute</fullName>
                </value>
                <value>
                    <fullName>Horse Power</fullName>
                </value>
                <value>
                    <fullName>Centimeter/hour</fullName>
                </value>
                <value>
                    <fullName>Cubic meter/Hour</fullName>
                </value>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Ampere</fullName>
                </value>
                <value>
                    <fullName>Kilowatt</fullName>
                </value>
                <value>
                    <fullName>Millimeter</fullName>
                </value>
                <value>
                    <fullName>Gallons per mile (US)</fullName>
                </value>
                <value>
                    <fullName>British Thermal Unit</fullName>
                </value>
                <value>
                    <fullName>Nos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reverse_GRN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Claim Number</label>
        <referenceTo>GRN__c</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGST__c</fullName>
        <formula>IF( ISPICKVAL( Defective_Category__c ,&apos;Sales Order&apos;) , Part_Request_Line_Item__r.SGST__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defective_Product_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Department_Name__c</fullName>
        <formula>IF ( ISPICKVAL( Defective_Category__c , &apos;RMR&apos;),
CASESAFEID( Part_Request__r.WorkOrder.Asset.Service_Department_L__r.Name ),
CASESAFEID( Part_Request__r.Department__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Department__c</fullName>
        <formula>IF ( ISPICKVAL( Defective_Category__c , &apos;RMR&apos;),
CASESAFEID(Part_Request__r.WorkOrder.Asset.Service_Department_L__c),
CASESAFEID( Part_Request__r.Department__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Defective Product Items</relationshipLabel>
        <relationshipName>Defective_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Defective Product Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Branch__c</columns>
        <columns>Part_Claim_Number_Text__c</columns>
        <columns>Service_Ticket_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Defective_Parts_SalesOrder_MSL</fullName>
        <columns>NAME</columns>
        <columns>Defective_Category__c</columns>
        <columns>Part_Request__c</columns>
        <columns>Quantity_On_Hand__c</columns>
        <columns>Reverse_GRN__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defective_Category__c</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Damaged</value>
        </filters>
        <label>Defective Parts SalesOrder/MSL</label>
    </listViews>
    <listViews>
        <fullName>RMR_Defective_Items</fullName>
        <columns>NAME</columns>
        <columns>Product_Division__c</columns>
        <columns>Product_Model__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Transfer__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Quantity_In_Transit__c</columns>
        <columns>Reverse_GRN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Defective_Category__c</field>
            <operation>equals</operation>
            <value>RMR</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Damaged</value>
        </filters>
        <label>RMR Defective Items</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DPI-{0000}</displayFormat>
        <label>Defective Part Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defective Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>